--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,10 @@
     <title>QR Menu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        body {
+            background-color: #f8f9fa; /* Arka plan rengi */
+        }
+
         .category {
             margin-bottom: 20px;
         }
@@ -14,10 +18,11 @@
             border: none;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #f8f9fa; /* Menü konteynır rengi */
         }
 
         .card-header {
-            background-color: #f8f9fa;
+            background-color: #e9ecef; /* Menü başlığı rengi */
             border-bottom: 1px solid #dee2e6;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
@@ -26,7 +31,15 @@
 
         .list-group-item {
             border: none;
-            background-color: #f8f9fa;
+            background-color: #f8f9fa; /* Menü öğesi rengi */
+        }
+
+        /* Sağ üst köşe düğmesi */
+        .qr-button {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
         }
     </style>
 </head>
@@ -38,16 +51,14 @@
         </div>
     </div>
 
-    <div class="container mt-5">
-        <h2 class="text-center mb-5">QR Code</h2>
-        <canvas id="qrCanvas" class="mx-auto"></canvas>
-    </div>
+    <!-- Sağ üst köşe düğmesi -->
+    <button class="btn btn-primary qr-button" onclick="window.location.href='/qr.html'">QR Code</button>
 
     <script src="https://cdn.jsdelivr.net/npm/qrious/dist/qrious.min.js"></script>
     <script>
-        const ipAddress = window.location.hostname; // Bu satır ile bilgisayarınızın IP adresini alabilirsiniz
+        const ipAddress = window.location.hostname;
 
-        fetch(`http://${ipAddress}:8080/qrMenus`) // IP adresini fetch URL'sine ekleyerek isteği gönderebilirsiniz
+        fetch(`http://${ipAddress}:8080/qrMenus`)
             .then(response => response.json())
             .then(data => {
                 const menuContainer = document.getElementById('menuContainer');
@@ -68,15 +79,6 @@
                         menuItem.textContent = `${menu.name} - ${menu.price} TL`;
                         menuList.appendChild(menuItem);
                     });
-                });
-
-                // QR kod oluşturma işlemi
-                const qrCodeText = `http://${ipAddress}:8080`;
-                const qrCanvas = document.getElementById('qrCanvas');
-                new QRious({
-                    element: qrCanvas,
-                    value: qrCodeText,
-                    size: 200
                 });
             });
     </script>
